Fix alignment of container without content

--- a/src/assets/stylesheets/components/_counter.scss
+++ b/src/assets/stylesheets/components/_counter.scss
@@ -36,6 +36,13 @@
     }
   }
 
+  .noDetailsCounter {
+    margin-top: 90px;
+    p {
+      color: $grey-500;
+    }
+  }
+
   .noBubbleHeader {
     padding-left: 1em;
     padding-top: 0.5em;
@@ -93,12 +100,6 @@
       color: $light-black;
     }
   }
-  .noDetailsCounter {
-    margin-top: 7em;
-    p {
-      color: $grey-500;
-    }
-  }
 }
 
 @media (max-width: 500px) {
@@ -146,6 +147,91 @@
       }
     }
 
+    .noDetailsCounter {
+      margin-top: 60px;
+      p {
+        color: $grey-500;
+      }
+    }
+
+    .confirmedNumberContainer {
+      line-height: 0px;
+
+      h1 {
+        font-size: 55px;
+      }
+      h2 {
+        font-size: 30px;
+      }
+    }
+
+    .confirmedText {
+      h3 {
+        text-transform: uppercase;
+        font-size: 10px;
+      }
+    }
+
+    .updatedText {
+      p {
+        font-size: 8px;
+      }
+    }
+  }
+}
+
+@media (max-height: 800px) {
+  .counterCard {
+    text-align: center;
+    line-height: 0px;
+    padding: 0.5em 0.5em;
+    max-width: 22em;
+    min-width: 150px;
+    margin-right: 0.25em;
+    margin-left: 0.25em;
+    max-height: 14em;
+    background-color: $white;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+
+    .header {
+      float: left;
+      align-items: center;
+      position: relative;
+      height: 4em;
+
+      p {
+        font-size: 15px;
+        margin-top: 11px;
+        margin-left: 26px;
+        letter-spacing: 1px;
+        float: left;
+        color: $light-black;
+        text-transform: uppercase;
+      }
+    }
+
+    .noBubbleHeader {
+      .detailsTitle {
+        p {
+          letter-spacing: 0px;
+        }
+      }
+      .detailsRegion {
+        p {
+          letter-spacing: 0px;
+        }
+      }
+    }
+
+    .noDetailsCounter {
+      margin-top: 60px;
+      p {
+        color: $grey-500;
+      }
+    }
+
     .confirmedNumberContainer {
       line-height: 0px;
 
@@ -168,22 +254,5 @@
         font-size: 8px;
       }
     }
-  }
-}
-
-@media (max-height: 700px) {
-  .counterCard {
-    text-align: center;
-    line-height: 0px;
-    padding: 0.5em 0.5em;
-    max-width: 22em;
-    min-width: 120px;
-    margin-right: 0.25em;
-    margin-left: 0.25em;
-    max-height: 14em;
-    background-color: $white;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
   }
 }
